# LizyML

./: .gitignore  ARCHITECTURE.md  BLUEPRINT.md  CHANGELOG.md  HISTORY.md  LICENSE  PLAN.md  README.md  pyproject.toml
.githooks/: pre-commit
.github/workflows/: ci.yml  release.yml
lizyml/: __init__.py
lizyml/calibration/: __init__.py  base.py  beta.py  cross_fit.py  isotonic.py  platt.py  registry.py
lizyml/config/: loader.py  schema.py
lizyml/core/: _model_factories.py  _model_persistence.py  _model_plots.py  _model_tables.py  exceptions.py  logging.py  model.py  registries.py  seed.py  train_components.py
lizyml/core/specs/: calibration_spec.py  export_spec.py  feature_spec.py  problem_spec.py  split_plan.py  split_spec.py  training_spec.py  tuning_spec.py
lizyml/core/types/: __init__.py  artifacts.py  fit_result.py  predict_result.py  tuning_result.py
lizyml/data/: dataframe_builder.py  datasource.py  fingerprint.py  validators.py
lizyml/estimators/: __init__.py  base.py  lgbm.py
lizyml/evaluation/: __init__.py  confusion.py  evaluator.py  oof.py  table_formatter.py  thresholding.py
lizyml/explain/: __init__.py  shap_explainer.py
lizyml/features/: pipeline_base.py  pipelines_native.py
lizyml/features/encoders/: categorical_encoder.py
lizyml/features/transformers/: feature_transformer.py  target_transformer.py
lizyml/metrics/: __init__.py  base.py  classification.py  registry.py  regression.py
lizyml/persistence/: __init__.py  exporter.py  loader.py
lizyml/plots/: __init__.py  calibration.py  classification.py  importance.py  learning_curve.py  oof_distribution.py  residuals.py  tuning.py
lizyml/splitters/: __init__.py  base.py  group_kfold.py  group_time_series.py  holdout.py  kfold.py  purged_time_series.py  time_series.py
lizyml/training/: __init__.py  cv_trainer.py  inner_valid.py  refit_trainer.py
lizyml/tuning/: __init__.py  search_space.py  tuner.py
lizyml/utils/: import_optional.py
notebooks/: tutorial_binary_lgbm.ipynb  tutorial_multiclass_lgbm.ipynb  tutorial_regression_lgbm.ipynb  tutorial_regression_tuning_lgbm.ipynb  tutorial_time_series_lgbm.ipynb
tests/: _helpers.py  test_code_review_fixes.py
tests/test_calibration/: test_beta_calibration.py  test_calibration.py  test_calibration_split.py  test_isotonic_calibration.py  test_raw_score_calibration.py
tests/test_config/: test_early_stopping_defaults.py  test_lgbm_smart_params.py  test_schema.py  test_stratified_default.py
tests/test_core/: test_contracts.py  test_exceptions.py  test_logging_output.py  test_train_components.py
tests/test_coverage/: test_edge_cases.py
tests/test_data/: test_data_layer.py
tests/test_e2e/: test_binary_full.py  test_column_drift.py  test_config_entry.py  test_golden_contracts.py  test_leakage_all.py  test_model_facade.py  test_multiclass_full.py  test_public_api.py  test_readme_example.py  test_regression_full.py  test_reproducibility.py  test_split_methods.py  test_split_summary.py  test_time_series_splits.py  test_version.py
tests/test_estimators/: test_estimators.py  test_lgbm_defaults.py  test_lgbm_resolve.py
tests/test_evaluation/: test_confusion.py  test_evaluation.py  test_table_formatter.py
tests/test_explain/: test_explain.py
tests/test_features/: test_feature_pipeline.py
tests/test_metrics/: test_metrics.py  test_multiclass_ovr_metrics.py  test_precision_at_k.py  test_regression_metrics.py
tests/test_notebooks/: test_notebook_cells.py  test_notebook_execution.py
tests/test_persistence/: test_persistence.py
tests/test_plots/: test_calibration_plots.py  test_classification_plots.py  test_plots.py  test_residuals.py  test_tuning_plot.py
tests/test_splitters/: test_splitters.py
tests/test_training/: test_inner_valid_extensions.py  test_training.py
tests/test_tuning/: test_default_space.py  test_tuner_extended.py  test_tuning.py  test_tuning_progress.py  test_tuning_result.py
