[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lizyml"
version = "0.1.0"
description = "Config-driven ML analysis library for regression and classification"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "LizyML Authors" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pydantic>=2.0",
    "numpy>=1.24",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "lightgbm>=4.0",
    "pyyaml>=6.0",
    "joblib>=1.3",
]

[project.urls]
Homepage = "https://github.com/nbx-liz/LizyML"
Repository = "https://github.com/nbx-liz/LizyML"

[project.optional-dependencies]
tuning = ["optuna>=3.0"]
explain = ["shap>=0.44"]
plots = ["matplotlib>=3.7"]

[dependency-groups]
dev = [
    "ruff>=0.8",
    "mypy>=1.10",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pandas-stubs>=2.0",
    "types-PyYAML>=6.0",
    "build>=1.0",
    "twine>=6.0",
    "pyarrow>=14.0",
    "optuna>=3.0",
    "shap>=0.44",
    "matplotlib>=3.7",
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]

[tool.mypy]
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = "sklearn.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "joblib"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "shap.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "matplotlib.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
